# turbopi-root

./: .gitignore  .gitmodules  detect_ball.py  diffusion_controller.py  goodies.sh  graph_csv.py  improved_milling_controller.py  leader_controller.py  milling_controller.py  milling_controller2.py  program1.sh  program2.sh  remote_milling_ss.py  set_velocity.py  snn_milling_controller.py
boot/: battchk.py  buttonman.py  buttonman.service  hardware_test.py  install_buttonman.sh  uninstall_buttonman.sh
hiwonder_common/: install.sh  pyproject.toml
hiwonder_common/src/hiwonder_common/: pid.py  statistics_tools.py
networks/: experiment_tenn2_mill20240330_1000t_n10_p100_s20_e2000.json  experiment_tenn2_mill20240726_1000t_n6_p100_e1000_s20.json  experiment_tenn2_mill20240802_1000t_n6_p100_e1000_s20.bak  experiment_tenn2_mill20240802_1000t_n6_p100_e1000_s20.json  experiment_tenn2_turbomill20240630_1000t_n10_p100_e1000_s20.json  experiment_tenn2_turbomill20240701_1000t_n10_p100_e1000_s21.json  experiment_tenn2_turbomill20240702_1000t_n10_p100_e1000_s22.json
